@@ -35,6 +35,7 @@ from bzrlib import (
     tsort,
     )
 from bzrlib.config import extract_email_address
+from bzrlib.revision import CURRENT_REVISION, Revision
 
 
 def annotate_file(branch, rev_id, file_id, verbose=False, full=False,
@@ -57,21 +58,58 @@ def annotate_file(branch, rev_id, file_id, verbose=False, full=False,
         to_file = sys.stdout
 
     # Handle the show_ids case
-    last_rev_id = None
+    annotations = _annotations(branch.repository, file_id, rev_id)
     if show_ids:
-        annotations = _annotations(branch.repository, file_id, rev_id)
-        max_origin_len = max(len(origin) for origin, text in annotations)
-        for origin, text in annotations:
-            if full or last_rev_id != origin:
-                this = origin
-            else:
-                this = ''
-            to_file.write('%*s | %s' % (max_origin_len, this, text))
-            last_rev_id = origin
-        return
+        return _show_id_annotations(annotations, to_file, full)
 
     # Calculate the lengths of the various columns
-    annotation = list(_annotate_file(branch, rev_id, file_id))
+    annotation = list(_expand_annotations(annotations, branch))
+    _print_annotations(annotation, verbose, to_file, full)
+
+
+def annotate_file_tree(tree, file_id, to_file, verbose=False, full=False,
+    show_ids=False):
+    """Annotate file_id in a tree.
+
+    The tree should already be read_locked() when annotate_file_tree is called.
+
+    :param tree: The tree to look for revision numbers and history from.
+    :param file_id: The file_id to annotate.
+    :param to_file: The file to output the annotation to.
+    :param verbose: Show all details rather than truncating to ensure
+        reasonable text width.
+    :param full: XXXX Not sure what this does.
+    :param show_ids: Show revision ids in the annotation output.
+    """
+    rev_id = tree.last_revision()
+    branch = tree.branch
+
+    # Handle the show_ids case
+    annotations = list(tree.annotate_iter(file_id))
+    if show_ids:
+        return _show_id_annotations(annotations, to_file, full)
+
+    # Calculate the lengths of the various columns
+    current_rev = Revision(CURRENT_REVISION)
+    current_rev.parent_ids = tree.get_parent_ids()
+    current_rev.committer = tree.branch.get_config().username()
+    current_rev.message = "?"
+    current_rev.timestamp = round(time.time(), 3)
+    current_rev.timezone = osutils.local_time_offset()
+    # Should get pending tags/fixes etc - pending commit attributes.
+    annotation = list(_expand_annotations(annotations, tree.branch,
+        current_rev))
+    _print_annotations(annotation, verbose, to_file, full)
+
+
+def _print_annotations(annotation, verbose, to_file, full):
+    """Print annotations to to_file.
+
+    :param to_file: The file to output the annotation to.
+    :param verbose: Show all details rather than truncating to ensure
+        reasonable text width.
+    :param full: XXXX Not sure what this does.
+    """
     if len(annotation) == 0:
         max_origin_len = max_revno_len = max_revid_len = 0
     else:
@@ -110,6 +148,19 @@ def annotate_file(branch, rev_id, file_id, verbose=False, full=False,
         prevanno = anno
 
 
+def _show_id_annotations(annotations, to_file, full):
+    last_rev_id = None
+    max_origin_len = max(len(origin) for origin, text in annotations)
+    for origin, text in annotations:
+        if full or last_rev_id != origin:
+            this = origin
+        else:
+            this = ''
+        to_file.write('%*s | %s' % (max_origin_len, this, text))
+        last_rev_id = origin
+    return
+
+
 def _annotations(repo, file_id, rev_id):
     """Return the list of (origin_revision_id, line_text) for a revision of a file in a repository."""
     annotations = repo.texts.annotate((file_id, rev_id))
@@ -117,20 +168,29 @@ def _annotations(repo, file_id, rev_id):
     return [(key[-1], line) for (key, line) in annotations]
 
 
-def _annotate_file(branch, rev_id, file_id):
-    """Yield the origins for each line of a file.
+def _expand_annotations(annotations, branch, current_rev=None):
+    """Expand a a files annotations into command line UI ready tuples.
 
-    This includes detailed information, such as the author name, and
-    date string for the commit, rather than just the revision id.
+    Each tuple includes detailed information, such as the author name, and date
+    string for the commit, rather than just the revision id.
+
+    :param annotations: The annotations to expand.
+    :param revision_id_to_revno: A map from id to revision numbers.
+    :param branch: A locked branch to query for revision details.
     """
+    repository = branch.repository
     revision_id_to_revno = branch.get_revision_id_to_revno_map()
-    annotations = _annotations(branch.repository, file_id, rev_id)
     last_origin = None
     revision_ids = set(o for o, t in annotations)
+    revisions = {}
+    if CURRENT_REVISION in revision_ids:
+        revision_id_to_revno[CURRENT_REVISION] = (
+            "%d?" % (branch.revno() + 1),)
+        revisions[CURRENT_REVISION] = current_rev
     revision_ids = [o for o in revision_ids if 
-                    branch.repository.has_revision(o)]
-    revisions = dict((r.revision_id, r) for r in 
-                     branch.repository.get_revisions(revision_ids))
+                    repository.has_revision(o)]
+    revisions.update((r.revision_id, r) for r in 
+                     repository.get_revisions(revision_ids))
     for origin, text in annotations:
         text = text.rstrip('\r\n')
         if origin == last_origin:
